--- a/scripts/install
+++ b/scripts/install
@@ -106,7 +106,7 @@ ynh_system_user_create --username=$app
 ynh_script_progression --message="Building $app... (this will take some time and resources!)" --weight=10
 
 pushd "$final_path" || ynh_die
-	setup.sh 
+	./setup.sh 
 popd || ynh_die
 
 #=================================================
