--- a/scripts/install
+++ b/scripts/install
@@ -67,7 +67,7 @@ yunohost service add $app --description="Webmin Daemon"
 ynh_script_progression --message="Starting a systemd service..."
 
 # Start a systemd service
-ynh_systemd_action --service_name=$app --action="restart" --line_match="Started LSB" --log_path="systemd"
+ynh_systemd_action --service_name=$app --action="restart" --line_match="Started Webmin server daemon" --log_path="systemd"
 
 #=================================================
 # END OF SCRIPT
