--- a/scripts/install
+++ b/scripts/install
@@ -59,7 +59,7 @@ yunohost service add $app --description="Webmin Daemon"
 ynh_script_progression "Starting $app's systemd service..."
 
 # Start a systemd service
-ynh_systemctl --service=$app --action="restart" --wait_until="Started Webmin server daemon" --log_path="systemd"
+ynh_systemctl --service=$app --action="restart" --log_path="systemd" #--wait_until="Started Webmin server daemon"
 
 #=================================================
 # END OF SCRIPT
