--- a/scripts/install
+++ b/scripts/install
@@ -17,19 +17,9 @@ dpkg --install $tempdir/webmin.deb
 ynh_safe_rm "$tempdir"
 
 #=================================================
-# NGINX CONFIGURATION
+# APP INITIAL CONFIGURATION
 #=================================================
-ynh_script_progression "Configuring NGINX web server..."
-
-# Create a dedicated NGINX config
-ynh_config_add_nginx
-
-#=================================================
-# SPECIFIC SETUP
-#=================================================
-# ADD A CONFIGURATION
-#=================================================
-ynh_script_progression "Adding $app's configuration..."
+ynh_script_progression "Adding $app's configuration files..."
 
 ynh_replace --match="port=10000" --replace="port=$port" --file="/etc/webmin/miniserv.conf"
 ynh_replace --match="listen=10000" --replace="listen=$port" --file="/etc/webmin/miniserv.conf"
@@ -38,18 +28,16 @@ ynh_replace --match="listen=10000" --replace="listen=$port" --file="/etc/webmin/
 ynh_store_file_checksum "/etc/webmin/miniserv.conf"
 
 #=================================================
-# SETUP SYSTEMD
+# SYSTEM CONFIGURATION
 #=================================================
-ynh_script_progression "Configuring $app's systemd service..."
+ynh_script_progression "Adding system configurations related to $app..."
+
+# Create a dedicated NGINX config
+ynh_config_add_nginx
 
 # Create a dedicated systemd config
 systemctl daemon-reload
 systemctl enable $app.service --quiet
-
-#=================================================
-# INTEGRATE SERVICE IN YUNOHOST
-#=================================================
-ynh_script_progression "Integrating service in YunoHost..."
 
 yunohost service add $app --description="Webmin Daemon"
 
@@ -59,7 +47,7 @@ yunohost service add $app --description="Webmin Daemon"
 ynh_script_progression "Starting $app's systemd service..."
 
 # Start a systemd service
-ynh_systemctl --service=$app --action="restart" --log_path="systemd" #--wait_until="Started Webmin server daemon"
+ynh_systemctl --service=$app --action="restart" --log_path="systemd"
 
 #=================================================
 # END OF SCRIPT
